welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.error
inOrderEqual:4: error: ';' expected but 'else' found.
	else if (equalOk==false&&a<b&&b<c) {
        ^