welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.code
def inOrderEqual(a:Int, b:Int, c:Int, equalOk:Boolean):Boolean = {
	var x:Boolean=false;

	else if (equalOk==false&&a<b&&b<c) {
		x=true
	}
	else if (equalOk==true&&(a==b||b==c||c==a)) {
		x=true
	}
	return x
}
